objects/tffa__DisclosureTemplate__c.object
<CustomObject>
    <description>Configuration for each disclosure.  Disclosure are of 2 types - an attachment uploaded to salesforce and a docusign template</description>
    <fields>
        <fullName>tffa__ApplicantRoleSet__c</fullName>
        <description>Roles (any one) that a party must have to be eligible for the disclosure</description>
        <label>Applicant role (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BuilderClass__c</fullName>
        <description>Name of the builder class to build disclosure payload</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Builder class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier for the disclosure.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__CorsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the cors is enabled at the external url.</description>
        <inlineHelpText>Applicable to External url. ensure CORS policy allows  site url</inlineHelpText>
        <label>CORS Enabled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the template.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the disclosure template unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentName__c</fullName>
        <description>Name of the document as identified in the system(Deprecated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Upload it under Salesforce Classic &gt; Document &gt; Disclosures</inlineHelpText>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ElectronicSignatureProvider__c</fullName>
        <description>Captures the name of the Electronic signature provider</description>
        <label>Electronic signature provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ElectronicSignatureProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <defaultValue>&quot;APPLICATION&quot;</defaultValue>
        <description>Type of entity e.g. PARTY, APPLICATION</description>
        <label>Entity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExecutionRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether digital signature is required</description>
        <label>Execution required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The disclosure text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__Locale__c</fullName>
        <description>Captures language for the current disclosure template configuration.</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if application data needs to be populated in the disclosure document</description>
        <label>Prefill required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Template__c</fullName>
        <description>The docusign template id.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Setup on docusign</inlineHelpText>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates the type of Disclosure. Values are TEXT, EXTERNAL_URL, DOCUSIGN</description>
        <inlineHelpText>EXTERNAL_URL is URL to access the document maintained in salesforce. Ensure to set correct Document Name for type as EXTERNAL_URL.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DisclosureType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>An external link if type is EXTERNAL_URL.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Content</label>
        <type>Url</type>
    </fields>
    <label>Disclosure Template</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>